# fb-claude-skills

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  README.md  VISION.md  pyproject.toml
.claude/: settings.json
.claude-plugin/: marketplace.json
.claude/agents/: control-builder.md  doc-claim-auditor.md  film-reviewer.md  task-coder.md
.claude/commands/: maintain.md
.claude/hooks/: kernel-parity.sh
.claude/rules/: general.md  model-delegation.md  plugins.md  skills.md
.github/workflows/: skill-maintenance.yml  validate-skills.yml
.skill-maintainer/: best_practices.md  config.json
apps/agent-state-mcp/: README.md  pyproject.toml
apps/agent-state-mcp/.claude-plugin/: plugin.json
apps/agent-state-mcp/skills/agent-state-mcp/: SKILL.md
apps/agent-state-mcp/skills/enable/: SKILL.md
apps/agent-state-mcp/src/agent_state_mcp/: __init__.py  server.py  tools.py
apps/env-forge/: README.md  pyproject.toml
apps/heylook-monitor/: main.ts  mcp-app.html
apps/mece-decomposer/: README.md  pyproject.toml
apps/readwise-reader/: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CONNECTORS.md  README.md  pyproject.toml  spec.md
apps/readwise-reader/.claude-plugin/: plugin.json
apps/readwise-reader/commands/: digest.md  reference.md  save.md  search.md  triage.md
apps/readwise-reader/skills/content-triage/: SKILL.md
apps/readwise-reader/skills/knowledge-retrieval/: SKILL.md
apps/readwise-reader/skills/library-search/: SKILL.md
apps/readwise-reader/src/readwise_reader/: __init__.py  server.py
apps/readwise-reader/src/readwise_reader/api/: __init__.py  client.py  models.py  rate_limiter.py
apps/readwise-reader/src/readwise_reader/auth/: __init__.py  metadata.py  oauth_server.py  token_store.py
apps/readwise-reader/src/readwise_reader/enrichment/: __init__.py  pipeline.py
apps/readwise-reader/src/readwise_reader/storage/: __init__.py  database.py  sync.py  webhook_handler.py
apps/readwise-reader/src/readwise_reader/storage/schemas/: reader.sql
apps/readwise-reader/src/readwise_reader/tools/: __init__.py  digest.py  documents.py  search.py  tags.py  triage.py
apps/readwise-reader/tests/: test_api_client.py  test_auth.py  test_storage.py  test_tools.py  test_webhook.py
apps/readwise-reader/tests/e2e/: conftest.py  test_e2e_connection.py  test_e2e_errors.py  test_e2e_oauth.py  test_e2e_tools.py
apps/skill-dashboard/: README.md  server.py
cogapp-markdown/: README.md  plugin.json
dimensional-modeling/: README.md
dimensional-modeling/.claude-plugin/: plugin.json
docs/: README.md  mcp-ecosystem.md
docs/analysis/: abstraction_analogies.md  claude_skills_best_practices_guide_full_report.md  cross_surface_compatibility.md  data_centric_agent_state_research.md  duckdb_dimensional_model_strategy.md  hooks_system_patterns.md  index.md  log.md  marketplace_distribution_patterns.md  mcp_apps_and_ui_development.md  mcp_ecosystem_audit_2026-02-19.md  mcp_protocol_and_servers.md  memory_and_rules_system.md  plugin_system_architecture.md  self_updating_system_design.md  skills_guide_analysis.md  skills_guide_structured.md  subagents_and_agent_teams.md
docs/blogs/: claude_com_blog_complete_guide_to_building_skills_for_claude.md
docs/claude-docs/: claude_docs_best_practices.md  claude_docs_cli-reference_reference.md  claude_docs_discover-plugins.md  claude_docs_discover_plugins.md  claude_docs_headless.md  claude_docs_hooks-guide.md  claude_docs_hooks_reference.md  (+15 more)
env-forge/: README.md
heylook-monitor/: README.md  main.ts  package-lock.json  package.json  server.ts
mcp-apps/: README.md  plugin.json
mece-decomposer/: .mcp.json  README.md
plugin-toolkit/: README.md  USE_CASES.md  plugin.json
research/schema-processing/: README.md  REPORT.md  pyproject.toml
research/schema-processing/scripts/: install_tools.sh  run_all.sh
research/schema-processing/src/schema_bench/: __init__.py  analyze.py  bench.py  cli.py  generate.py  queries.py  report.py  tools.py
research/schema-processing/src/schema_bench/generators/: __init__.py  array_heavy.py  deep.py  flat.py  mixed.py  nested.py  real_world.py  wide.py
research/schema-processing/tests/: test_generators.py  test_queries.py
skill-dashboard/: README.md  pyproject.toml  server.py
skill-dashboard/.claude-plugin/: plugin.json
skill-dashboard/skills/skill-dashboard/: SKILL.md
skill-dashboard/templates/: dashboard.html
skill-maintainer/: README.md  SKILL.md  config.yaml  pyproject.toml
tools/: dep-audit-scan.README.md  dep-audit-scan.sh
tools/agent-state/: BACKLOG.md  README.md  pyproject.toml
tools/agent-state/src/agent_state/: __init__.py  cli.py  database.py  delegations.py  migration.py  models.py  query.py  run_context.py  skill_versions.py  watermarks.py
tools/agent-state/src/agent_state/schemas/: agent_state.sql
tools/agent-state/tests/: test_database.py  test_delegations.py  test_migration.py  test_run_context.py  test_skill_versions.py  test_watermarks.py
tools/skill-maintainer/: BACKLOG.md  README.md  pyproject.toml
tools/skill-maintainer/src/skill_maintainer/: __init__.py  cli.py  config.py  freshness.py  lint.py  log.py  measure.py  quality.py  scaffold.py  shared.py  tests.py  upstream.py  validate.py
tools/skill-maintainer/src/skill_maintainer/templates/: pre-commit.sample
tools/skill-maintainer/tests/: test_changelog_version.py  test_measure_tokens.py  test_path_privacy.py  test_review_interval.py  test_version_alignment.py
tui-design/: README.md
vibium-tdd/: README.md  plugin.json
web-app-tdd/: README.md  plugin.json
web-tdd/: PROJECT-NOTES.md  README.md  SKILL.md  plugin.json
(+341 files in other folders)
