[project]
name = "skill-dashboard"
version = "0.1.0"
description = "MCP App skill dashboard"
requires-python = ">=3.11"
dependencies = ["orjson>=3.10", "pyyaml>=6.0", "mcp>=1.0.0", "mcp-ui-server>=1.0.0"]

[tool.uv]
package = false

[tool.uv.sources]
mcp-ui-server = { git = "https://github.com/idosal/mcp-ui", subdirectory = "sdks/python/server" }
