[project]
name = "readwise-reader"
version = "0.1.0"
requires-python = ">=3.13"
description = "Cowork plugin and MCP server for Readwise Reader - search, save, and surface your reading library"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [{name = "Fred Bliss"}]
dependencies = [
    "mcp[cli]>=1.26.0",
    "httpx>=0.28.0",
    "duckdb>=1.2.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "orjson>=3.10.0",
    "authlib>=1.4.0",
    "uvicorn>=0.34.0",
    "starlette>=0.45.0",
    "cryptography>=44.0.0",
    "skill-maintainer",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "respx>=0.22.0",
]

[project.scripts]
readwise-reader = "readwise_reader.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/readwise_reader"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = [
    "e2e: end-to-end tests using in-process ASGI MCP client",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["B905"]  # zip() strict= not needed for DB row->dict conversions

[tool.mypy]
python_version = "3.13"
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.uv.sources]
skill-maintainer = { workspace = true }
