[project]
name = "agent-state"
version = "0.1.0"
description = "DuckDB audit and state tracking for agent and pipeline runs"
requires-python = ">=3.11"
dependencies = ["orjson>=3.10", "duckdb>=1.2"]

[project.scripts]
agent-state = "agent_state.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_state"]
