[project]
name = "skill-maintainer"
version = "0.5.2"
description = "Maintenance tooling for Agent Skills repos"
requires-python = ">=3.11"
dependencies = ["orjson>=3.10", "httpx>=0.27", "skills-ref"]

[project.scripts]
skill-maintain = "skill_maintainer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/skill_maintainer"]
